# guppy

./: Makefile.in  autogen.sh  configure.ac
cee/: guppy_struct.h  index.c  index.h  lib_main.c  lib_main.h  oid.c  oid.h  repository.c  repository.h
guppy/: repo.scm  utils.scm
